force-app/main/default/objects/Edition__c/Edition__c.object-meta.xml
<CustomObject>
    <description>It defines the Event Edition Information. Also contains information of which badge setting, form setting, event setting will be used for the event.</description>
    <label>Edition</label>
    <nameField>
        <label>Edition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Edition</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>