force-app/main/default/objects/Edition__c/fields/Additional_Badge_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Additional_Badge_Allocated__c</fullName>
    <label>Additional Badge Allocated</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>