force-app/main/default/objects/Edition__c/fields/Additional_Language__c.field-meta.xml
<CustomField>
    <fullName>Additional_Language__c</fullName>
    <label>Additional Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Turkish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>