force-app/main/default/objects/Edition__c/fields/Advance__c.field-meta.xml
<CustomField>
    <fullName>Advance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked apply advance price based on advance cutoff date, otherwise take standard price</description>
    <inlineHelpText>If checked apply advance price based on advance cutoff date, otherwise take standard price</inlineHelpText>
    <label>Advance</label>
    <type>Checkbox</type>
</CustomField>