force-app/main/default/objects/Edition__c/fields/Advance_Cutoff__c.field-meta.xml
<CustomField>
    <fullName>Advance_Cutoff__c</fullName>
    <description>Advance Price Plan cutoff date. After this date Standard Price would be used.</description>
    <inlineHelpText>Advance Price Plan cutoff date. After this date Standard Price would be used.</inlineHelpText>
    <label>Advance Cutoff</label>
    <type>Date</type>
</CustomField>