force-app/main/default/objects/Edition__c/fields/Advance_Rate_Description__c.field-meta.xml
<CustomField>
    <fullName>Advance_Rate_Description__c</fullName>
    <description>Advance Rate Description.</description>
    <label>Advance Rate Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>