force-app/main/default/objects/Edition__c/fields/All_Contract_Need_Accounting_Approval__c.field-meta.xml
<CustomField>
    <fullName>All_Contract_Need_Accounting_Approval__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This Checkbox store whether All Contract need Accounting Approval or not.</description>
    <label>All Contract Need Accounting Approval</label>
    <type>Checkbox</type>
</CustomField>