force-app/main/default/objects/Edition__c/fields/Allow_Docusign_Counter_Sign__c.field-meta.xml
<CustomField>
    <fullName>Allow_Docusign_Counter_Sign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow Docusign Counter Sign</description>
    <label>Allow Docusign Counter Sign</label>
    <type>Checkbox</type>
</CustomField>