force-app/main/default/objects/Edition__c/fields/Approval_Service_Now_ID__c.field-meta.xml
<CustomField>
    <fullName>Approval_Service_Now_ID__c</fullName>
    <description>Approval - Service Now ID</description>
    <label>Approval - Service Now ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>