force-app/main/default/objects/Edition__c/fields/Assets_Creation_Days__c.field-meta.xml
<CustomField>
    <fullName>Assets_Creation_Days__c</fullName>
    <description>Assets Creation Days (Not in Use)</description>
    <label>Assets Creation Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>