force-app/main/default/objects/Edition__c/fields/Background_Colour__c.field-meta.xml
<CustomField>
    <fullName>Background_Colour__c</fullName>
    <description>Define the branding color of the background of Footer</description>
    <inlineHelpText>Define the branding color of the background of Footer</inlineHelpText>
    <label>Background Colour</label>
    <length>50</length>
    <type>Text</type>
</CustomField>