force-app/main/default/objects/Edition__c/fields/BCC_Emails__c.field-meta.xml
<CustomField>
    <fullName>BCC_Emails__c</fullName>
    <description>BCC Emails for Conga.</description>
    <inlineHelpText>Format for multiple emails : 

abc@xyz.com,lmn@xyz.com</inlineHelpText>
    <label>BCC Emails</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>