force-app/main/default/objects/Edition__c/fields/Booth_Rent_Stage__c.field-meta.xml
<CustomField>
    <fullName>Booth_Rent_Stage__c</fullName>
    <description>Stage After Which Booth Can be Rented.</description>
    <label>Booth Rent Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Contract</fullName>
                <default>true</default>
                <label>On Contract</label>
            </value>
            <value>
                <fullName>On Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>