force-app/main/default/objects/Edition__c/fields/Business_Hours_In_Turkish__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours_In_Turkish__c</fullName>
    <inlineHelpText>Support Business Hours(In Turkish)</inlineHelpText>
    <label>Business Hours(In Turkish)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>