force-app/main/default/objects/Edition__c/fields/Cancellation_Charge_Percentage_1__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Charge_Percentage_1__c</fullName>
    <description>Cancellation Charge Percentage After Cancellation Date 1.</description>
    <label>Cancellation Charge Percentage 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>