force-app/main/default/objects/Edition__c/fields/Cancellation_Charge_Percentage_2__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Charge_Percentage_2__c</fullName>
    <description>Cancellation Charge Percentage After  Cancellation Date 2.</description>
    <label>Cancellation Charge Percentage 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>