force-app/main/default/objects/Edition__c/fields/Cancellation_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date_1__c</fullName>
    <description>Cancellation Cut off date 1.</description>
    <label>Cancellation Date 1</label>
    <type>Date</type>
</CustomField>