force-app/main/default/objects/Edition__c/fields/Cancellation_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date_2__c</fullName>
    <description>Cancellation Cut off date 2.</description>
    <label>Cancellation Date 2</label>
    <type>Date</type>
</CustomField>