force-app/main/default/objects/Edition__c/fields/Cancellation_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date_3__c</fullName>
    <description>Cancellation Cut off date 3.</description>
    <label>Cancellation Date 3</label>
    <type>Date</type>
</CustomField>