force-app/main/default/objects/Edition__c/fields/CC_Emails__c.field-meta.xml
<CustomField>
    <fullName>CC_Emails__c</fullName>
    <description>This field stores all CC Emails.</description>
    <inlineHelpText>Emails to be CC&apos;ed on invoices

Format for multiple emails :

abc@xyz.com,lmn@xyz.com</inlineHelpText>
    <label>CC Emails</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>