force-app/main/default/objects/Edition__c/fields/Company_Profile_Submission_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Company_Profile_Submission_Due_Date__c</fullName>
    <label>Company Profile Submission Due Date</label>
    <type>Date</type>
</CustomField>