force-app/main/default/objects/Edition__c/fields/Contract_Creation__c.field-meta.xml
<CustomField>
    <fullName>Contract_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contract Creation for this Edition is Automated. If unchecked, a user with the correct permission set will have access to execute this Action</description>
    <inlineHelpText>Contract Creation for this Edition is Automated. If unchecked, a user with the correct permission set will have access to execute this Action</inlineHelpText>
    <label>Contract Creation</label>
    <type>Checkbox</type>
</CustomField>