force-app/main/default/objects/Edition__c/fields/Contract_Template__c.field-meta.xml
<CustomField>
    <fullName>Contract_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This Lookup store the id of the associated Contract Template.</description>
    <label>Contract Template</label>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>Edition (Contract Template)</relationshipLabel>
    <relationshipName>Event_Edition1</relationshipName>
    <type>Lookup</type>
</CustomField>