force-app/main/default/objects/Edition__c/fields/Contractor_Nomination_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Nomination_Due_Date__c</fullName>
    <description>Contractor Nomination Due Date</description>
    <label>Contractor Nomination Due Date</label>
    <type>Date</type>
</CustomField>