force-app/main/default/objects/Edition__c/fields/Country_Label__c.field-meta.xml
<CustomField>
    <fullName>Country_Label__c</fullName>
    <description>Country Name for Edition.</description>
    <label>Country Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>