force-app/main/default/objects/Edition__c/fields/Credit_Note_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Email_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Please specify the conga email template for Credit Note.</description>
    <inlineHelpText>Please specify the conga email template for Credit Note.</inlineHelpText>
    <label>Credit Note Email Template</label>
    <referenceTo>APXTConga4__Conga_Email_Template__c</referenceTo>
    <relationshipName>Event_Edition2</relationshipName>
    <type>Lookup</type>
</CustomField>