force-app/main/default/objects/Edition__c/fields/CS_Parm_2__c.field-meta.xml
<CustomField>
    <fullName>CS_Parm_2__c</fullName>
    <label>CS Parm 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>