force-app/main/default/objects/Edition__c/fields/CS_Parm_3__c.field-meta.xml
<CustomField>
    <fullName>CS_Parm_3__c</fullName>
    <label>CS Parm 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>