force-app/main/default/objects/Edition__c/fields/CS_Team__c.field-meta.xml
<CustomField>
    <fullName>CS_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Choose which support team needs to worked on an event</description>
    <inlineHelpText>It is a customer support team which will support this event.</inlineHelpText>
    <label>CS Team</label>
    <referenceTo>ChatSupportTeam__c</referenceTo>
    <relationshipLabel>Edition</relationshipLabel>
    <relationshipName>Edition</relationshipName>
    <type>Lookup</type>
</CustomField>