force-app/main/default/objects/Edition__c/fields/Customer_Support_Team__c.field-meta.xml
<CustomField>
    <fullName>Customer_Support_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Support Team</label>
    <referenceTo>Customer_Services_Team__c</referenceTo>
    <relationshipLabel>Edition</relationshipLabel>
    <relationshipName>Edition</relationshipName>
    <type>Lookup</type>
</CustomField>