force-app/main/default/objects/Edition__c/fields/Cutoff_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Cutoff_Date_2__c</fullName>
    <description>Cutoff Date 3 for payment schedule.</description>
    <label>Cutoff Date 3</label>
    <type>Date</type>
</CustomField>