force-app/main/default/objects/Edition__c/fields/Cutoff_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Cutoff_Date_3__c</fullName>
    <description>Cutoff Date 4 for payment schedule.</description>
    <label>Cutoff Date 4</label>
    <type>Date</type>
</CustomField>