force-app/main/default/objects/Edition__c/fields/CutoffDate_1__c.field-meta.xml
<CustomField>
    <fullName>CutoffDate_1__c</fullName>
    <description>Cutoff Date 2 for payment schedule.</description>
    <label>Cutoff Date 2</label>
    <type>Date</type>
</CustomField>