force-app/main/default/objects/Edition__c/fields/CutoffDate__c.field-meta.xml
<CustomField>
    <fullName>CutoffDate__c</fullName>
    <description>Cutoff Date 1 for payment schedule.</description>
    <label>Cutoff Date 1</label>
    <type>Date</type>
</CustomField>