force-app/main/default/objects/Edition__c/fields/Days_until_The_Edition_STARTDATE__c.field-meta.xml
<CustomField>
    <fullName>Days_until_The_Edition_STARTDATE__c</fullName>
    <description>This Formula Store the Days remaining until the start of Edition.</description>
    <formula>Start_Date__c- TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until The Edition STARTDATE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>