force-app/main/default/objects/Edition__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>shows the last date, user can submit the badges</description>
    <label>Badge Submission Due Date</label>
    <type>Date</type>
</CustomField>