force-app/main/default/objects/Edition__c/fields/Edition_Code__c.field-meta.xml
<CustomField>
    <fullName>Edition_Code__c</fullName>
    <label>Edition Code</label>
    <length>250</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>