force-app/main/default/objects/Edition__c/fields/Edition_Cut_Off_days__c.field-meta.xml
<CustomField>
    <fullName>Edition_Cut_Off_days__c</fullName>
    <description>Edition Cut-off Days : ( number of days beyond which  the payment schedule will be just 1 billing Transaction - for e.g. if order is placed within 60 days of Event Edition Start date then its just 1 Billing Transaction with a Billing Target date of today(). If the difference between today and Event Start date is  &gt; “Edition Cut-off Days“ then move to the next level.</description>
    <label>Edition Cut-off Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>