force-app/main/default/objects/Edition__c/fields/Edition_Description__c.field-meta.xml
<CustomField>
    <fullName>Edition_Description__c</fullName>
    <description>Used to display content in footer at customer portal.</description>
    <inlineHelpText>Define the content in footer at customer portal.</inlineHelpText>
    <label>Edition Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>