force-app/main/default/objects/Edition__c/fields/Edition_Director__c.field-meta.xml
<CustomField>
    <fullName>Edition_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This Lookup Field store the id of the Edition Director.</description>
    <label>Edition Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Edition</relationshipName>
    <type>Lookup</type>
</CustomField>