force-app/main/default/objects/Edition__c/fields/Edition_Doc_Name__c.field-meta.xml
<CustomField>
    <fullName>Edition_Doc_Name__c</fullName>
    <description>This Field stores Edition Document Name.</description>
    <label>Edition Doc Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>