force-app/main/default/objects/Edition__c/fields/Edition_G_L_Code__c.field-meta.xml
<CustomField>
    <fullName>Edition_G_L_Code__c</fullName>
    <description>Edition GL Code.</description>
    <label>Edition G/L Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>