force-app/main/default/objects/Edition__c/fields/Edition_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Edition_Image_URL__c</fullName>
    <description>This Field stores Edition Logo Id.</description>
    <label>Edition Logo Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>