force-app/main/default/objects/Edition__c/fields/Edition_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Edition_Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This Lookup stores the value of the related Price Book.</description>
    <label>Edition Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Edition</relationshipLabel>
    <relationshipName>Event_Edition</relationshipName>
    <type>Lookup</type>
</CustomField>