force-app/main/default/objects/Edition__c/fields/Edition_Require_Informa_Logo__c.field-meta.xml
<CustomField>
    <fullName>Edition_Require_Informa_Logo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This checkbox stores whether Edition Require a Informa Logo or not.</description>
    <label>Edition Require Informa Logo</label>
    <type>Checkbox</type>
</CustomField>