force-app/main/default/objects/Edition__c/fields/Edition_Status__c.field-meta.xml
<CustomField>
    <fullName>Edition_Status__c</fullName>
    <description>This picklist stores the status of Edition.</description>
    <label>Edition Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Tentative</fullName>
            </value>
            <value>
                <fullName>Cancelled by Finance</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Postponed</fullName>
            </value>
            <value>
                <fullName>Pending Setup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>