force-app/main/default/objects/Edition__c/fields/Edition_Type__c.field-meta.xml
<CustomField>
    <fullName>Edition_Type__c</fullName>
    <description>This picklist stores value of the type of Edition.</description>
    <label>Edition Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Publication</fullName>
            </value>
            <value>
                <fullName>Trade Event</fullName>
            </value>
            <value>
                <fullName>Consumer Event</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>