force-app/main/default/objects/Edition__c/fields/Edition_Website__c.field-meta.xml
<CustomField>
    <fullName>Edition_Website__c</fullName>
    <description>This field store URL of the Edition Website.</description>
    <label>Edition Website</label>
    <type>Url</type>
</CustomField>