force-app/main/default/objects/Edition__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>This field stores the End date of Edition.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>