force-app/main/default/objects/Edition__c/fields/Event_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_Code__c</fullName>
    <label>Expocad Event Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>