force-app/main/default/objects/Edition__c/fields/Event_Setting__c.field-meta.xml
<CustomField>
    <fullName>Event_Setting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Setting</label>
    <referenceTo>Event_Setting__c</referenceTo>
    <relationshipLabel>Edition</relationshipLabel>
    <relationshipName>Edition_del</relationshipName>
    <type>Lookup</type>
</CustomField>