force-app/main/default/objects/Edition__c/fields/EventCurrency__c.field-meta.xml
<CustomField>
    <fullName>EventCurrency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Avilable Currencies for Edition.</description>
    <label>Available  Currency</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>EventCurrecies__c.Event_Edition__c</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <filterItems>
            <field>EventCurrecies__c.Event_Edition__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>EventCurrecies__c</referenceTo>
    <relationshipName>Event_Edition</relationshipName>
    <type>Lookup</type>
</CustomField>