force-app/main/default/objects/Edition__c/fields/Expocad_Event_Code__c.field-meta.xml
<CustomField>
    <fullName>Expocad_Event_Code__c</fullName>
    <description>contains expocad event code which will be used in formula Floorplan url</description>
    <label>Expocad Event Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>