force-app/main/default/objects/Edition__c/fields/External_Relationship__c.field-meta.xml
<CustomField>
    <fullName>External_Relationship__c</fullName>
    <defaultValue>false</defaultValue>
    <description>External Relationship avalible</description>
    <label>External Relationship</label>
    <type>Checkbox</type>
</CustomField>