force-app/main/default/objects/Edition__c/fields/External_Status__c.field-meta.xml
<CustomField>
    <fullName>External_Status__c</fullName>
    <description>External System Status</description>
    <label>External Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>