force-app/main/default/objects/Edition__c/fields/FaceBook__c.field-meta.xml
<CustomField>
    <fullName>FaceBook__c</fullName>
    <description>Define the facebook URL on facebook icon on customer portal.</description>
    <inlineHelpText>Define the Facebook URL.</inlineHelpText>
    <label>FaceBook</label>
    <type>Url</type>
</CustomField>