force-app/main/default/objects/Edition__c/fields/Floorplan_Url__c.field-meta.xml
<CustomField>
    <fullName>Floorplan_Url__c</fullName>
    <formula>IF( ISBLANK( Expocad_Event_Code__c ) ,&quot;Not Available&quot;,  HYPERLINK(&quot;https://www.expocad.com/host/fx/informa/&quot;+Expocad_Event_Code__c+&quot;/exfx.html#floorplan&quot;, &quot;View Floorplan&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Floorplan Url</label>
    <type>Text</type>
</CustomField>