force-app/main/default/objects/Edition__c/fields/Hotline_Number__c.field-meta.xml
<CustomField>
    <fullName>Hotline_Number__c</fullName>
    <label>Hotline Number</label>
    <type>Phone</type>
</CustomField>