force-app/main/default/objects/Edition__c/fields/IM_EventEditionId__c.field-meta.xml
<CustomField>
    <fullName>IM_EventEditionId__c</fullName>
    <description>Used for mapping the live chat with IM org basis on event edition</description>
    <label>IM_EventEditionId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>