force-app/main/default/objects/Edition__c/fields/Informa_log_url__c.field-meta.xml
<CustomField>
    <fullName>Informa_log_url__c</fullName>
    <description>This Formula Text forms the URL for the Informa Logo</description>
    <formula>$Setup.Logo_URL_Prefix__c.URL_prefix__c &amp; Informa_Logo__c &amp; &quot;&amp;oid=&quot; &amp; $Setup.Logo_URL_Prefix__c.Company_Information_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Informa log url</label>
    <type>Text</type>
</CustomField>