force-app/main/default/objects/Edition__c/fields/Informa_Logo__c.field-meta.xml
<CustomField>
    <fullName>Informa_Logo__c</fullName>
    <defaultValue>&quot;01550000003Ld8E&quot;</defaultValue>
    <description>Informa Logo</description>
    <inlineHelpText>This logo is located on the top left corner of all Conga Templates</inlineHelpText>
    <label>Informa Logo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>