force-app/main/default/objects/Edition__c/fields/Informa_logo_url__c.field-meta.xml
<CustomField>
    <fullName>Informa_logo_url__c</fullName>
    <formula>$Setup.Logo_URL_Prefix__c.URL_prefix__c &amp;  Informa_Logo__c  &amp; &quot;&amp;oid=&quot; &amp; $Setup.Logo_URL_Prefix__c.Company_Information_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Informa logo url</label>
    <type>Text</type>
</CustomField>