force-app/main/default/objects/Edition__c/fields/Instagram__c.field-meta.xml
<CustomField>
    <fullName>Instagram__c</fullName>
    <description>Define the Instagram URL on Instagram icon on customer portal.</description>
    <inlineHelpText>Define Instagram URL</inlineHelpText>
    <label>Instagram</label>
    <type>Url</type>
</CustomField>