force-app/main/default/objects/Edition__c/fields/Invoice_Alert_Amt__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Alert_Amt__c</fullName>
    <defaultValue>5000000</defaultValue>
    <description>This field stores the Invoice Alert Amount.</description>
    <label>Invoice Alert Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>