force-app/main/default/objects/Edition__c/fields/Invoice_Creation__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Invoice Creation for this Edition is Automated. If unchecked, a user with the correct permission set will have access to execute this Action</description>
    <inlineHelpText>Invoice Creation for this Edition is Automated. If unchecked, a user with the correct permission set will have access to execute this Action</inlineHelpText>
    <label>Invoice Creation</label>
    <type>Checkbox</type>
</CustomField>