force-app/main/default/objects/Edition__c/fields/Invoice_From_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Invoice_From_Email_ID__c</fullName>
    <description>From Email Address For Invoice PDF.</description>
    <inlineHelpText>Copy the Org Wide EMail ID SFDC ID here.</inlineHelpText>
    <label>Invoice From Email ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>