force-app/main/default/objects/Edition__c/fields/Invoice_PDF_Creation__c.field-meta.xml
<CustomField>
    <fullName>Invoice_PDF_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Invoice PDF Creation for this Edition is Automated. If unchecked, a User with the correct permission set will have access to execute this Action</description>
    <inlineHelpText>Invoice PDF Creation for this Edition is Automated. If unchecked, a User with the correct permission set will have access to execute this Action</inlineHelpText>
    <label>Invoice PDF Creation</label>
    <type>Checkbox</type>
</CustomField>