force-app/main/default/objects/Edition__c/fields/Invoice_Posting__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Posting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Invoice Posting for this Edition is Automated. If unchecked, a User with the correct permission set will have access to execute this Action</description>
    <inlineHelpText>Invoice Posting for this Edition is Automated. If unchecked, a User with the correct permission set will have access to execute this Action</inlineHelpText>
    <label>Invoice Posting</label>
    <type>Checkbox</type>
</CustomField>