force-app/main/default/objects/Edition__c/fields/Invoice_To_Customer__c.field-meta.xml
<CustomField>
    <fullName>Invoice_To_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sending Invoice to this Customer for this Edition is Automated. If unchecked, a User with the correct permission set will have access to execute this Action</description>
    <inlineHelpText>Sending Invoice to this Customer for this Edition is Automated. If unchecked, a User with the correct permission set will have access to execute this Action</inlineHelpText>
    <label>Invoice To Customer</label>
    <type>Checkbox</type>
</CustomField>